noinst_LTLIBRARIES = libmuparser.la

libmuparser_la_CXXFLAGS = \
	-DMUPARSER_DLL -DMUPARSERLIB_EXPORTS

libmuparser_la_SOURCES = \
	muParserBase.cpp \
	muParserBytecode.cpp \
	muParserCallback.cpp \
	muParserComplex.cpp \
	muParser.cpp \
	muParserDLL.cpp \
	muParserError.cpp \
	muParserInt.cpp \
	muParserTest.cpp \
	muParserTokenReader.cpp

noinst_HEADERS = \
	muParserBase.h \
	muParserBytecode.h \
	muParserCallback.h \
	muParserComplex.h \
	muParserDef.h \
	muParserDLL.h \
	muParserError.h \
	muParserFixes.h \
	muParser.h \
	muParserInt.h \
	muParserStack.h \
	muParserTest.h \
	muParserToken.h \
	muParserTokenReader.h

