noinst_LTLIBRARIES = libmuparser.la

libmuparser_la_SOURCES = \
	muParserBase.cpp \
	muParserBytecode.cpp \
	muParserCallback.cpp \
	muParserComplex.cpp \
	muParser.cpp \
	muParserError.cpp \
	muParserInt.cpp \
	muParserTokenReader.cpp

noinst_HEADERS = \
	muParserBase.h \
	muParserBytecode.h \
	muParserCallback.h \
	muParserComplex.h \
	muParserDef.h \
	muParserError.h \
	muParserFixes.h \
	muParser.h \
	muParserInt.h \
	muParserStack.h \
	muParserToken.h \
	muParserTokenReader.h

