noinst_LTLIBRARIES = libmuparser.la

libmuparser_la_SOURCES = \
	muParserBase.cpp \
	muParserBytecode.cpp \
	muParserCallback.cpp \
	muParser.cpp \
	muParserError.cpp \
	muParserTokenReader.cpp

noinst_HEADERS = \
	muParserBase.h \
	muParserBytecode.h \
	muParserCallback.h \
	muParserDef.h \
	muParserError.h \
	muParserFixes.h \
	muParser.h \
	muParserStack.h \
	muParserToken.h \
	muParserTokenReader.h

